templates/linkrecommendation_template.yaml
---
# Source: linkrecommendation/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linkrecommendation-release-name
  labels:
    app: linkrecommendation
    chart: linkrecommendation-0.2.16
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: linkrecommendation
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8000
        protocol: TCP
---
# Source: linkrecommendation/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkrecommendation-release-name
  labels:
    app: linkrecommendation
    chart: linkrecommendation-0.2.16
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: linkrecommendation
    release: release-name
    routed_via: release-name
  ports:
    - name: http
      targetPort: 8000
      port: 8000
---
# Source: linkrecommendation/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkrecommendation-release-name
  labels:
    app: linkrecommendation
    chart: linkrecommendation-0.2.16
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: linkrecommendation
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: linkrecommendation
        release: release-name
        routed_via: release-name
      annotations:
        checksum/secrets: 8a121c73d97ffb00e2736668d8bb550ea320710ef21c67ab1fb229e66d5039cc
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"        
    spec:
      containers:
        # The main application container
        - name: linkrecommendation-release-name
          image: "docker-registry.wikimedia.org/wikimedia/research-mwaddlink:stable"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
          resources:
            requests:
              cpu: 750m
              memory: 200Mi
            limits:
              cpu: 1600m
              memory: 550Mi
---
# Source: linkrecommendation/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'linkrecommendation-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'linkrecommendation-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(LINKRECOMMENDATION_RELEASE_NAME_SERVICE_HOST)', 'http://linkrecommendation-release-name:8000']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
